# SuperReads

./: .gitignore  Makefile.am  configure.ac  development.mk  development.mk.in  doxygen.cfg.in  gtest.mk  header-license  install.sh
data/: adapter.fa
include/: binary_search_tree_iterator.hpp  charb.hpp  charbuf.hpp  divisor.hpp  err.hpp  exp_buffer.hpp  exp_vector.hpp  fork_exec.hpp  gcc_builtins.hpp  heap.hpp  int128.hpp  misc.hpp  multi_thread_skip_list_map.hpp  multi_thread_skip_list_set.hpp  rb_node.hpp  rb_tree.hpp  reallocators.hpp  skip_list_common.hpp  skip_list_map.hpp  skip_list_set.hpp  thread_exec.hpp  thread_pool.hpp  tmpstream.hpp  yaggo.hpp
include/jflib/: atomic_field.hpp  circular_buffer.hpp  compare_and_swap.hpp  locks_pthread.hpp  multiplexed_io.hpp  multiplexed_parser.hpp  pool.hpp
lib/: err.cc  fork_exec.cpp  int128.cc  thread_exec.cc
src/: Makefile.am  Makefile.am.bak  Makefile.in  MasurcaCelera.pm  MasurcaCommon.pm  MasurcaConf.pm  MasurcaPaths.pm.in  MasurcaSoap.pm  MasurcaSuperReads.pm  MurmurHash3.h  aligned_simple_array.hpp  annotate_maker.sh  annotate_maker_fast.sh  bloom_counter2.hpp  bloom_filter.hpp  bloom_hash.hpp  bloom_query.cc  bloom_query_cmdline.yaggo  changeReadNumsToReadNamesAtBeginOfLine.c  charb.hpp  charbuf.hpp  close_gaps.sh  combine_jf_dbs.cc  combine_jf_dbs.hpp  combine_jf_dbs.yaggo  combine_jf_dbs_cmdline.yaggo  compute_sr_cov.pl  convertReadMateInfoIntoKUnitigMateInfoForMateJoining.perl  convertReadNamesToReadNumbers.c  createCombinedGoodJoinsFile.perl  createFastaSuperReadSequences.c  createFastaSuperReadSequences.cc  createKUnitigMaxOverlaps.cc  createSuperReadGroupsFromMatePairJoinedMates.perl  createSuperReadsForDirectory.perl  create_end_pairs.pl  create_k_unitigs.cpp  create_k_unitigs.ggo  create_k_unitigs.yaggo  create_k_unitigs_cmdline.cpp  (+126 more)
src2/: Makefile.am  _redBlackTreesInsertOnly.c  addSurrogatesToFrgCtgFile.cc  addSurrogatesToFrgctg.perl  add_missing_mates.pl  closeGaps.oneDirectory.fromMinKmerLen.perl  closeGaps.oneDirectory.perl  closeGaps.perl  closeGapsInScaffFastaFile.perl  closeGapsLocally.perl  collectReadSequencesForLocalGapClosing.cc  collectReadSequencesForLocalGapClosing_cmdline.yaggo  compute_sr_cov.revisedForGCContig.pl  createFastaSuperReadSequences.cc  createKUnitigMaxOverlaps.cc  createSuperReadSequenceAndPlacementFileFromCombined.perl  createSuperReadsForDirectory.perl  createSuperReadsForDirectory_v2.perl  create_end_pairs.perl  create_sr_frg.cc  eliminateBadSuperReadsUsingList.cc  extendSuperReadsBasedOnUniqueExtensions.cc  extendSuperReadsBasedOnUniqueExtensions_cmdline.yaggo  extendSuperReadsForUniqueKmerNeighbors.cc  extendSuperReadsForUniqueKmerNeighbors_cmdline.yaggo  extractJoinableAndNextPassReadsFromJoinKUnitigs.perl  findMatchesBetweenKUnitigsAndReads.cc  findMatchesBetweenKUnitigsAndReads.hpp  findMatchesBetweenKUnitigsAndReads.yaggo  findMatchesBetweenKUnitigsAndReads_cmdline.yaggo  findReversePointingJumpingReads.perl  findReversePointingJumpingReads_bigGenomes.perl  getATBiasInCoverageForIllumina.v2.cc  getATBiasInCoverageForIllumina_v2.cc  getEndSequencesOfContigs.perl  getGCBiasStatistics.perl  getLengthStatisticsForKUnitigsFile.perl  getMeanAndStdevByGCCount.perl  getMeanAndStdevForGapsByGapNumUsingCeleraAsmFile.perl  getMeanAndStdevForGapsByGapNumUsingCeleraTerminatorDirectory.perl  (+36 more)
unittests/: Makefile.am  misc.cc  test_bloom_counter2.cc  test_bloom_filter.cc  test_charb.cc  test_charbuf.cc  test_divisor.cc  test_dna_fragment.cc  test_exp_buffer.cc  test_exp_vector.cc  test_hash.cc  test_heap.cc  test_int128.cc  test_main.cc  test_main.hpp  test_main_cmdline.yaggo  test_mer_dna.cc  test_mer_stream.cc  test_multi_thread_skip_list_map.cc  test_multi_thread_skip_list_set.cc  test_rbtree.cc  test_read_parser.cc  test_skip_list_map.cc  test_skip_list_set.cc  test_sr_names.cc
unittests/gtest/.svn/: all-wcprops  entries
unittests/gtest/include/.svn/: all-wcprops  entries
unittests/gtest/include/gtest/.svn/: all-wcprops  entries
unittests/gtest/include/gtest/internal/.svn/: all-wcprops  entries
unittests/gtest/src/.svn/: all-wcprops  entries
